--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -3979,6 +3979,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
 }
 
 .bb-right .bb-chart {
