--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
@@ -11,11 +11,10 @@
   border-radius: 5px;
   border: none;
   background-color: rgb(228, 228, 228);
-  // box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-  // border: 0.1px solid black;
   &:hover {
     background-color: #dddddd;
   }
+  cursor: pointer;
 }
 
 .bb-container {
@@ -112,15 +111,29 @@
         display: flex;
         flex-direction: row;
         margin: 20px;
+        @media screen and (max-width: 631px) {
+          flex-direction: column;
+          margin: 0;
+          align-items: flex-end;
+        }
       }
       .bb-budget-edit-btn {
-        cursor: pointer;
         @include button();
       }
       .bb-budget-delete-btn {
-        cursor: pointer;
         margin-right: 15px;
         @include button();
+        @media screen and (max-width: 631px) {
+          margin-right: 0;
+          padding: 8px;
+        }
+      }
+      .bb-budget-cancel-btn {
+        @include button();
+        @media screen and (max-width: 631px) {
+          margin: 10px 0 10px;
+          padding: 8px;
+        }
       }
     }
     .bb-budget-middle {
@@ -188,28 +201,22 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: flex-start;
-    @media screen and (max-width: 589px) {
+    .bb-delete-custom-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      top: 3px;
+      @include button();
+      padding: 8px;
     }
-  }
-  .bb-delete-custom-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 3px;
-    @include button();
-    padding: 6px;
-    cursor: pointer;
-    // height: 30px;
   }
 }
 .bb-add-custom-btn {
-  cursor: pointer;
   @include button();
 }
 
 .bb-submit-custom-btn {
-  cursor: pointer;
   @include button();
   margin-right: 20px;
   background-color: #4fcec5;
@@ -222,6 +229,10 @@
   @include center(column);
   align-items: flex-start;
   margin: 0 20px 20px 0;
+  flex-wrap: nowrap;
+  @media screen and (max-width: 557px) {
+    margin-right: 10px;
+  }
   .bb-input-title {
     font-size: 20px;
   }
