--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -22,3 +22,11 @@ html {
   // overflow-y: hidden;
   // overflow-x: hidden;
 }
+
+.app-page-container {
+  height: 100vh;
+  width: 100vw;
+  overflow-y: scroll;
+  margin: 0;
+  padding: 0;
+}
