--- a/public/assets/Styles/05.Overview/Overview.css
+++ b/public/assets/Styles/05.Overview/Overview.css
@@ -64,7 +64,7 @@
       -ms-flex-pack: start;
           justify-content: flex-start;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   width: 30%;
 }
 
@@ -207,7 +207,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 65%;
-  height: 100vh;
+  height: 100%;
 }
 
 .overview-outter-container .overview-column-container .overview-snapshot-container .overview-snapshots {
