--- a/public/assets/Styles/SharedComponents/02.Navbar/Navbar.css
+++ b/public/assets/Styles/SharedComponents/02.Navbar/Navbar.css
@@ -16,7 +16,7 @@
   background-color: #a5dfdc;
   -webkit-box-shadow: 0px 9px 5px -4px #d1d1d1;
           box-shadow: 0px 9px 5px -4px #d1d1d1;
-  width: 100vw;
+  width: 100%;
   height: 60px;
   padding: 1em;
   margin-bottom: 15px;
