--- a/public/assets/Styles/SharedComponents/02.Navbar/Navbar.scss
+++ b/public/assets/Styles/SharedComponents/02.Navbar/Navbar.scss
@@ -11,7 +11,7 @@
   @include flexCenter(column);
   background-color: #a5dfdc;
   box-shadow: 0px 9px 5px -4px rgb(209, 209, 209);
-  width: 100vw;
+  width: 100%;
   height: 60px;
   padding: 1em;
   margin-bottom: 15px;
