finished 80% of subscriptions page (addedd charts and icons)

--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -15,6 +15,7 @@
 @import "../07.BudgetBreakdown/BudgetBreakdown.scss";
 @import "../06.Goals/Goals.scss";
 @import "../08.Subscriptions/Subscriptions.scss";
+@import "../08.Subscriptions/Subchart/SubCharts.scss";
 
 body,
 html {
