--- a/public/assets/Styles/08.Subscriptions/Subscriptions.scss
+++ b/public/assets/Styles/08.Subscriptions/Subscriptions.scss
@@ -23,7 +23,7 @@
       justify-content: flex-start;
       background-color: rgb(227, 227, 227);
       height: 100%;
-      width: 40%;
+      width: 38%;
 
       .list-header-container {
         @include flexCenter(row);
@@ -83,18 +83,116 @@
               font-weight: bold;
               color: white;
             }
+
+            .sub-organizer {
+              @include flexCenter(row);
+              justify-content: flex-start;
+              align-items: center;
+              width: 100%;
+
+              .sub-title {
+                font-size: 1.1em;
+
+                &:hover {
+                  font-size: 1.1em;
+                  font-weight: bold;
+                  color: white;
+                }
+              }
+
+              .logo-container {
+                object-fit: contain;
+                width: 30%;
+                margin-right: 2em;
+              };
+            }
           }
         }
       }
     }
 
-    .subscriptions-graph-container {
-      width: 57%;
-      height: 100%;
-      border: 1px solid rgb(186, 186, 186);
+    img.logo {
+      width: 50px;
+      height: 50px;
+      object-fit: contain;
     }
 
+    img.bigger-logo {
+      object-fit: contain;
+    }
 
+    .subscriptions-graph-container {
+      width: 60%;
+      height: 100%;
+      border: 1px solid rgb(186, 186, 186);
+      @include flexCenter(column);
+      justify-content: flex-start;
+      align-items: center;
+
+      .current-sub-box {
+        @include flexCenter(column);
+        justify-content: center;
+        width: 100%;
+        height: 20%;
+        margin-top: 1em;
+
+        .current-sub-section {
+          @include flexCenter(row);
+          justify-content: flex-start;
+          align-items: center;
+          width: 95%;
+          padding: 0.5em;
+
+          .bigger-logo-container {
+            width: 35%;
+            height: 40%;
+            @include flexCenter(column);
+            justify-content: center;
+            margin-right: 3em;
+          }
+
+          .current-sub-title {
+            font-size: 1.6em;
+            font-weight: bold;
+            color: rgb(87, 87, 87);
+
+            .mini-title {
+              font-size: 0.8em;
+              font-weight: lighter;
+              color: rgb(143, 143, 143);
+            }
+          }
+        }
+
+        .current-sub-title-choose {
+          font-size: 2.1em;
+          font-weight: bold;
+          color: rgb(21, 136, 138);
+          width: 60%;
+          text-align: center;
+          border: 1px solid rgb(165, 165, 165);
+          border-radius: 10px;
+
+          .current-sub-title-choose-icon {
+            font-size: 0.8em;
+            color: rgb(21, 136, 138);
+            margin-right: 1em;
+          }
+        }
+      }
+
+      .graph-container {
+        width: 100%;
+        height: 70%;
+        margin-top: 1em;
+        padding: 1em;
+
+        .recharts-responsive-container {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
 
   }
 }
