--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -28,7 +28,11 @@ html {
 .app-page-container {
   height: 100vh;
   width: 100vw;
-  overflow-y: scroll;
   margin: 0;
   padding: 0;
+
+  .app-page-inner-container {
+    height: 100%;
+    width: 100%;
+  }
 }
