--- a/public/assets/Styles/01.Homepage/AboutUs/AboutUs.scss
+++ b/public/assets/Styles/01.Homepage/AboutUs/AboutUs.scss
@@ -1,27 +1,52 @@
+@mixin flexCenter($direction) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: $direction;
+  font-family: "Avenir";
+}
+
 .about-us {
+  @include flexCenter(row);
+  justify-content: space-evenly;
+  align-items: center;
   background-color: #ffffff;
   font-family: 'Roboto';
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 300px;
+  height: 30%;
   width: 100%;
-  .ab-img {
-    height: 250px;
-    width: 40%;
-    margin: 2%;
+  padding: 0.5em;
+  margin-top: 1em;
+  .about-us-img {
+    width: 45%;
+    height: 100%;
   }
   .description {
-    width: 50%;
-    height: 250px;
+    width: 45%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    font-family: 'Roboto';
+    font-size: 1.2em;
+    padding: 2em;
     color: #696969;
-    font-size: 1.3em;
+
+    .descipt-paragraph {
+      line-height: 1.8em;
+      margin: 0;
+    }
+
     @media screen and (max-width: 627px) {
       height: 200px;
       font-size: 1em;
     }
   }
+}
+
+img.ab-img {
+  height: auto;
+  width: 100%;
+  margin: 2%;
+  object-fit: contain;
+  box-shadow: 0px 3px 10px 0px rgba(135, 135, 135, 0.75);
 }
