--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
@@ -1,43 +1,62 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-.tools-offered {
-  background-color: #ffffff;
-  font-family: 'Roboto';
+@mixin flexCenter($direction) {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  flex-direction: $direction;
+  font-family: "Avenir";
+}
+
+.tool-outter-container {
   width: 100%;
-  height: 1300px;
-  margin-top: 40px;
-  .tools {
-    float: left;
-    width: 45%;
-    margin-left: 5%;
-    color: #696969;
-    border-bottom: solid #696969 3px;
-  }
-  .tool-slot {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 300px;
-    width: 100%;
-  }
-  .example-image {
-    height: 250px;
-    width: 50%;
-  }
-  .about-tool {
-    display: flex;
-    flex-direction: column;
+  height: 40%;
+
+  .tools-offered {
+    @include flexCenter(column);
     justify-content: space-evenly;
-    text-align: center;
-    color: #696969;
-    font-size: 1em;
-    width: 50%;
-    height: 250px;
+    width: 100%;
+    font-family: 'Roboto';
+    overflow-x: hidden;
+
+    .tool-section {
+      @include flexCenter(row);
+      justify-content: space-evenly;
+      align-items: center;
+      height: 40%;
+      width: 100%;
+      padding: 2em;
+
+      .tool-text-container {
+        @include flexCenter(column);
+        align-items: flex-start;
+        width: 40%;
+        max-height: 100%;
+        padding: 0.8em;
+        .tool-title {
+          font-size: 1.5em;
+          font-weight: bold;
+          color: rgb(69, 69, 69);
+        }
+        .tool-paragraph {
+          line-height: 1.6em;
+          padding: 0.5em;
+        }
+      }
+
+      .tool-image-container {
+        width: 50%;
+        height: auto;
+        background-color: rgb(186, 220, 249);
+        border: none;
+        box-shadow: 0px 3px 10px 0px rgba(135, 135, 135, 0.75);
+      }
+    }
   }
+
+}
+
+
+img.example-image {
+  height: 150px;
+  width: 150px;
+  object-fit: contain;
 }
