--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -31,8 +31,8 @@ html {
   margin: 0;
   padding: 0;
 
-  .app-page-inner-container {
-    height: 100%;
-    width: 100%;
-  }
+  // .app-page-inner-container {
+  //   height: 100%;
+  //   width: 100%;
+  // }
 }
