--- a/public/assets/Styles/06.Goals/Goals.scss
+++ b/public/assets/Styles/06.Goals/Goals.scss
@@ -1,64 +1,117 @@
-@import './GoalsList/GoalsList';
-@import './AddGoalModal/AddGoalModal';
+@import "./GoalsList/GoalsList";
+@import "./AddGoalModal/AddGoalModal";
 
 .goals-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #ffffff;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   color: #696969;
   font-size: 1.5em;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  margin: 1% .5% 1% .5%;
-  .goals-list {
-    width: 37%;
-    border: 1px solid #696969;
+  width: 100vw;
+  .goals-container {
+    width: 1500px;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    .current-goals {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
+    flex-direction: row;
+    margin: 30px 0 30px;
+    @media screen and (max-width: 1600px) {
+      width: 95%;
     }
-    .add-new {
+    @media screen and (max-width: 1000px) {
+      flex-direction: column;
+    }
+    .goals-list {
       display: flex;
-      flex-direction: row;
-      justify-content: end;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 37%;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+      padding: 20px;
+      @media screen and (max-width: 1000px) {
+        width: 100%;
+        margin-bottom: 30px;
+      }
+      .goals-main {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        .goals-top {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          .goals-div-title {
+            color: black;
+            font-size: 30px;
+            font-weight: bold;
+            margin-bottom: 10px;
+          }
+        }
+      }
+      .add-new {
+        margin-top: 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: end;
+        cursor: pointer;
+      }
     }
   }
   .goals-analytics {
-    width: 57%;
+    width: 60%;
+    @media screen and (max-width: 1000px) {
+      width: 100%;
+    }
     .current-goal-title {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      font-size: 1em;
-      height: 50px;
-      border: 1px solid #696969;
-      padding: 0px 16px 0px 16px;
+      // height: 50px;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+      padding: 12px 16px 12px 25px;
       margin-bottom: 20px;
+      font-size: 30px;
+      // font-weight: bold;
+      color: black;
     }
     .icon-style {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       width: 60px;
+      cursor: pointer;
     }
     .chart-space {
       display: flex;
       flex-direction: row;
+      @media screen and (max-width: 650px) {
+        flex-direction: column;
+      }
     }
     .description {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 50%;
       height: 500px;
-      border: 1px solid #696969;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+      @media screen and (max-width: 650px) {
+        width: 100%;
+      }
     }
     .forecast {
       width: 50%;
       height: 500px;
-      border: 1px solid #696969;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+      padding: 30px;
+      @media screen and (max-width: 650px) {
+        width: 100%;
+      }
+    }
+    .forecast div {
+      margin-bottom: 10px;
     }
   }
 }
