Adding mobile styling to subs and overall styling fixes

--- a/public/assets/Styles/01.Homepage/Homepage.scss
+++ b/public/assets/Styles/01.Homepage/Homepage.scss
@@ -14,6 +14,7 @@
 .nl-home-container {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 
   .nl-home-inner-container {
     @include flexCenter(column);
