styling with Seiji

--- a/public/assets/Styles/06.Goals/GoalsList/GoalsList.scss
+++ b/public/assets/Styles/06.Goals/GoalsList/GoalsList.scss
@@ -6,7 +6,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 10px;
-  margin: 10px;
+  // margin: 10px;
   cursor: pointer;
   .name-bar {
     width: 80%;
