--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -21,18 +21,15 @@ body,
 html {
   padding: 0;
   margin: 0;
-  // overflow-y: hidden;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .app-page-container {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   margin: 0;
   padding: 0;
-
-  // .app-page-inner-container {
-  //   height: 100%;
-  //   width: 100%;
-  // }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
