--- a/public/assets/Styles/02.Signup/Signup.scss
+++ b/public/assets/Styles/02.Signup/Signup.scss
@@ -65,7 +65,7 @@ $phone: 450px;
 .signup-credentials-div {
   margin-top: 20px;
   width: 85%;
-  padding: 30px;
+  padding: 30px 10px 30px 10px;
   // border: 1px solid red;
   background-color: #d1e0de;
   display: flex;
