--- a/public/assets/Styles/05.Overview/Overview.scss
+++ b/public/assets/Styles/05.Overview/Overview.scss
@@ -13,6 +13,7 @@ $border: none;
   justify-content: center;
   width: 100%;
   height: 100%;
+  margin: 50px 0 50px;
 
   .overview-column-container {
     @include flexCenter(row);
@@ -34,7 +35,7 @@ $border: none;
 
     @media all and (max-width: 1300px) {
       width: 90%;
-      height: 85%;
+      height: 95%;
     }
 
 
@@ -58,7 +59,7 @@ $border: none;
         box-shadow: -1px 4px 14px 0px rgb(135, 213, 199);
 
         @media all and (max-width: 2500px) {
-          font-size: 2em;
+          font-size: 1.7em;
         }
         @media all and (max-width: 1900px) {
           font-size: 1.5em;
@@ -160,6 +161,7 @@ $border: none;
         align-items: flex-start;
         width: 100%;
         height: 32%;
+        margin-bottom: 1em;
         box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
         border: none;
         transition: 0.5s ease;
