--- a/public/assets/Styles/08.Subscriptions/Subscriptions.scss
+++ b/public/assets/Styles/08.Subscriptions/Subscriptions.scss
@@ -9,13 +9,15 @@
 .subscriptions-outter-container {
   height: 100%;
   width: 100%;
+  margin: 50px 0 50px;
   @include flexCenter(row);
   justify-content: center;
 
   .subscriptions-inner-container {
     @include flexCenter(row);
     justify-content: space-between;
-    height: 80%;
+    align-items: flex-start;
+    height: 100%;
     width: 95%;
 
     @media all and (max-width: 2800px) {
@@ -166,7 +168,7 @@
 
     .subscriptions-graph-container {
       width: 60%;
-      height: 100%;
+      height: 650px;
       border: none;
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
       @include flexCenter(column);
@@ -176,6 +178,7 @@
       @media all and (max-width: 750px) {
         width: 95%;
         height: 60%;
+        margin-top: 1.5em;
       }
 
       .current-sub-box {
@@ -257,7 +260,7 @@
 
       .graph-container {
         width: 100%;
-        height: 70%;
+        // height: 70%;
         margin-top: 1em;
         padding: 1em;
         @include flexCenter(row);
