--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
@@ -6,57 +6,87 @@
   font-family: "Avenir";
 }
 
+// https://bgjar.com/animated-shape
+
 .tool-outter-container {
+  @include flexCenter(column);
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 40%;
+  height: 650px;
+  margin: 110px 0 80px;
 
-  .tools-offered {
-    @include flexCenter(column);
-    justify-content: space-evenly;
+  .tool-header-div {
+    @include flexCenter(row);
     width: 100%;
-    font-family: 'Roboto';
-    overflow-x: hidden;
-
-    .tool-section {
-      @include flexCenter(row);
-      justify-content: space-evenly;
-      align-items: center;
-      height: 40%;
-      width: 100%;
-      padding: 2em;
-
-      .tool-text-container {
-        @include flexCenter(column);
-        align-items: flex-start;
-        width: 40%;
-        max-height: 100%;
-        padding: 0.8em;
-        .tool-title {
-          font-size: 1.5em;
-          font-weight: bold;
-          color: rgb(69, 69, 69);
-        }
-        .tool-paragraph {
-          line-height: 1.6em;
-          padding: 0.5em;
-        }
-      }
-
-      .tool-image-container {
-        width: 50%;
-        height: auto;
-        background-color: rgb(202, 227, 249);
-        border: none;
-        box-shadow: 0px 3px 10px 0px rgba(135, 135, 135, 0.75);
-      }
+    height: 70px;
+    .tool-header-title {
+      font-size: 2em;
+      color: rgb(89, 89, 89);
+      margin-right: 1em;
+    }
+    .tool-icon {
+      font-size: 2.1em;
+      color: rgb(121, 181, 170);
     }
   }
 
+  .tools-offered {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 15px;
+    grid-row-gap: 0px;
+    width: 95%;
+    height: 60%;
+    font-family: "Roboto";
+    overflow-x: hidden;
+
+    .tool-section {
+      @include flexCenter(column);
+      justify-content: cen;
+      height: 70%;
+      width: 90%;
+      padding: 1em;
+      // border: 1px solid rgb(114, 114, 114);
+      // box-shadow: 0px 3px 10px 0px rgba(135, 135, 135, 0.75);
+
+      .tool-text-container {
+        @include flexCenter(column);
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 80%;
+        border-radius: 10px;
+        transition: 0.5s ease;
+        padding: 0.6em;
+        &:hover {
+          box-shadow: 0px 3px 10px 0px rgba(135, 135, 135, 0.75);
+          outline: 1px solid  rgb(144, 213, 200);
+        }
+        .tool-title {
+          width: 100%;
+          text-align: center;
+          font-size: 1.5em;
+          font-weight: bold;
+          padding: 0.3em;
+          color: rgb(121, 181, 170);
+        }
+        .tool-paragraph {
+          padding: 0.8em;
+          line-height: 1.9em;
+          height: 80%;
+          width: 100%;
+          text-align: center;
+          margin: 0;
+        }
+      }
+    }
+  }
 }
 
-
-img.example-image {
-  height: 150px;
-  width: 150px;
-  object-fit: contain;
+img.tool-image {
+  height: 200px;
+  width: 370px;
+  border: 1px solid rgb(148, 148, 148);
 }
