--- a/public/assets/Styles/01.Homepage/SignUp/SignUp.scss
+++ b/public/assets/Styles/01.Homepage/SignUp/SignUp.scss
@@ -4,9 +4,9 @@
   align-items: center;
   flex-direction: $direction;
   font-family: "Avenir";
-}
+ }
 
-.sign-up-container {
+ .sign-up-container {
   width: 100%;
   height: 40%;
   margin-bottom: 7em;
@@ -17,29 +17,54 @@
     width: 100%;
     height: 20%;
 
+    @media all and (max-width: 750px) {
+      @include flexCenter(column);
+      justify-content: space-evenly;
+      height: auto;
+    }
+
     .free-secure-reliable {
       height: 100%;
       @include flexCenter(column);
       justify-content: flex-start;
       align-items: flex-start;
 
+      @media all and (max-width: 750px) {
+        @include flexCenter(row);
+        justify-content: space-evenly;
+        height: auto;
+        width: 90%;
+      }
+
       .tid-bit {
         font-family: "Roboto";
         font-size: 2em;
         margin: 0.5em;
         color: rgb(133, 133, 133);
+
+        @media all and (max-width: 400px) {
+          font-size: 1.5em;
+        }
       }
     }
 
     .paragraph-container {
       width: 35%;
       margin-right: 1em;
+
+      @media all and (max-width: 750px) {
+        width: 65%;
+      }
       .paragraph-size {
         font-family: "Roboto";
         font-size: 1.3em;
         line-height: 1.4em;
         color: rgb(123, 123, 123);
         text-align: center;
+        @media all and (max-width: 750px) {
+          font-size: 1.1em;
+          line-height: 1.4em;
+        }
       }
 
       .sign-up-section {
@@ -73,10 +98,12 @@
     }
   }
 
-}
+ }
 
-img.logo-smoll {
+ img.logo-smoll {
   height: 230px;
   width: 230px;
   margin-right: 1em;
-}
+ }
+
+
