--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
@@ -37,7 +37,7 @@
     grid-template-rows: 1fr;
     grid-column-gap: 15px;
     grid-row-gap: 0px;
-    width: 95%;
+    width: 100%;
     height: 60%;
     font-family: "Roboto";
     overflow-x: hidden;
@@ -100,7 +100,8 @@
  }
 
  img.tool-image {
-  height: 200px;
-  width: 370px;
+  // height: 200px;
+  // width: 370px;
   border: 1px solid rgb(148, 148, 148);
+  object-fit: contain;
  }
