fixed/updated sizing of home page images and used correct path

--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -1,4 +1,7 @@
 @import "../01.Homepage/Homepage.scss";
+@import "../01.Homepage/ToolsOffered/ToolsOffered.scss";
+@import "../01.Homepage/AboutUs/AboutUs.scss";
+@import "../01.Homepage/SignUp/SignUp.scss";
 @import "../02.Signup/Signup.scss";
 @import "../02.Signup/password-modal/password.scss";
 @import "../02.Signup/additional-info/additionalInfo.scss";
