--- a/public/assets/Styles/02.Signup/password-modal/password.scss
+++ b/public/assets/Styles/02.Signup/password-modal/password.scss
@@ -36,6 +36,7 @@
   font-size: 13px;
   color: #20b2aa;
   text-align: center;
+  margin: 0;
 }
 
 .constraints {
@@ -47,6 +48,7 @@
 .line {
   width: 100%;
   height: 2px;
+  margin: 0;
 }
 
 .progress {
